added skeleton pages for post, user, and all users

--- a/assets/templates/Forum Skeleton/AllUsers.cshtml
+++ b/assets/templates/Forum Skeleton/AllUsers.cshtml
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>{Forum Name} - Forum Info</title>
+    <title>{Forum Name} - All Users</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -53,11 +53,15 @@
         
         <div class="content">
         
-        <h1>Forum Info</h1>
+        <h1>All Users</h1>
+        
+        <ul class="breadcrumb">
+            <li class="active">Users</li>
+        </ul>
         
         <hr />
         
-        <p><small>(Forum info here.)</small></p>
+        <p><small>(User listing goes here.)</small></p>
             
         <footer>
           <p>&copy; Newco 2011-12</p>
