--- a/assets/templates/Forum Skeleton/Home.cshtml
+++ b/assets/templates/Forum Skeleton/Home.cshtml
@@ -76,9 +76,9 @@
                     <img src="images/thumb-down.png"/><br/>
                     <img src="images/icon_notification_attention.png"/><br/>
                 </div>    
-                <h2>{Most Popular Post Title}</h2>           
+                <h2><a href="Post.cshtml">{Most Popular Post Title}</a></h2>           
                 <p>This is a listing of the top posts across all forums. This post is the top overall, and they decrease left to right. Lower ranked posts display shorter text excerpts. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere velit aliquet.
-                &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <span class="label">Another Category</span></span></p>
+                &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <a href="Category.cshtml" class="label">Another Category</a></span></p>
                 <div class="row">
                     <div class="span5"><a class="btn" href="#">Add comment &raquo;</a></div>
                     <div class="span5" style="padding-top: 7px; text-align: right; font-size: smaller;"><a href="#">999 comments</a></div>
@@ -90,9 +90,9 @@
                     <img src="images/thumb-down.png"/><br/>
                     <img src="images/icon_notification_attention.png"/><br/>
                 </div>    
-                <h2>{Post Title}</h2>           
+                <h2><a href="Post.cshtml">{Post Title}</a></h2>           
                 <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere. Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere. 
-                    &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <span class="label">Category</span></span></p>
+                    &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <a href="Category.cshtml" class="label">Category</a></span></p>
                 <div class="row">
                     <div class="span3"><a class="btn small" href="#">Add comment &raquo;</a></div>
                     <div class="span3" style="padding-top: 7px; text-align: right; font-size: smaller;"><a href="#">999 comments</a></div>
@@ -109,9 +109,9 @@
                     <img src="images/thumb-down.png"/><br/>
                     <img src="images/icon_notification_attention.png"/><br/>
                 </div>    
-                <h2>{Post Title}</h2>           
+                <h2><a href="Post.cshtml">{Post Title}</a></h2>             
                 <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere. Etiam porta sem malesuada magna mollis euismod. 
-                &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <span class="label">Placeholder Category</span></span></p>
+                &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <a href="Category.cshtml" class="label">Placeholder Category</a></span></p>
                 <div class="row">
                     <div class="span4"><a class="btn" href="#">Add comment &raquo;</a></div>
                     <div class="span4" style="padding-top: 7px; text-align: right; font-size: smaller;"><a href="#">999 comments</a></div>
@@ -123,9 +123,9 @@
                     <img src="images/thumb-down.png"/><br/>
                     <img src="images/icon_notification_attention.png"/><br/>
                 </div>    
-                <h2>{Post Title}</h2>           
+                <h2><a href="Post.cshtml">{Post Title}</a></h2>             
                 <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere. Etiam porta sem malesuada magna mollis euismod. 
-                &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <span class="label">Another Category</span></p>
+                &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <a href="Category.cshtml" class="label">Another Category</a></p>
                 <div class="row">
                     <div class="span4"><a class="btn small" href="#">Add comment &raquo;</a></div>
                     <div class="span4" style="padding-top: 7px; text-align: right; font-size: smaller;"><a href="#">999 comments</a></div>
@@ -142,9 +142,9 @@
                     <img src="images/thumb-down.png"/><br/>
                     <img src="images/icon_notification_attention.png"/><br/>
                 </div>    
-                <h2>{Post Title}</h2>           
+                <h3><a href="Post.cshtml">{Post Title}</a></h3>            
                 <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere. 
-                    &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <span class="label">Example Category</span></p>
+                    &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <a href="Category.cshtml" class="label">Example Category</a></p>
                 <div class="row">
                     <div class="span2"><a class="btn small" href="#">Add comment &raquo;</a></div>
                     <div class="span2" style="padding-top: 7px; text-align: right; font-size: smaller;"><a href="#">999 comments</a></div>
@@ -156,9 +156,9 @@
                     <img src="images/thumb-down.png"/><br/>
                     <img src="images/icon_notification_attention.png"/><br/>
                 </div>    
-                <h2>{Post Title}</h2>           
+                <h3><a href="Post.cshtml">{Post Title}</a></h3>           
                 <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere. 
-                    &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <span class="label">Creative Category</span></p>
+                    &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <a href="Category.cshtml" class="label">Creative Category</a></p>
                 <div class="row">
                     <div class="span2"><a class="btn small" href="#">Add comment &raquo;</a></div>
                     <div class="span2" style="padding-top: 7px; text-align: right; font-size: smaller;"><a href="#">999 comments</a></div>
@@ -170,9 +170,9 @@
                     <img src="images/thumb-down.png"/><br/>
                     <img src="images/icon_notification_attention.png"/><br/>
                 </div>    
-                <h2>{Post Title}</h2>           
+                <h3><a href="Post.cshtml">{Post Title}</a></h3>           
                 <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere. 
-                    &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <span class="label">Unmoderated Forum</span></p>
+                    &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <a href="Category.cshtml" class="label">Unmoderated Forum</a></p>
                 <div class="row">
                     <div class="span2"><a class="btn small" href="#">Add comment &raquo;</a></div>
                     <div class="span2" style="padding-top: 7px; text-align: right; font-size: smaller;"><a href="#">999 comments</a></div>
@@ -184,9 +184,9 @@
                     <img src="images/thumb-down.png"/><br/>
                     <img src="images/icon_notification_attention.png"/><br/>
                 </div>    
-                <h2>{Post Title}</h2>           
+                <h3><a href="Post.cshtml">{Post Title}</a></h3>           
                 <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere. 
-                    &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <span class="label">Category</span></p>
+                    &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <a href="Category.cshtml" class="label">Category</a></p>
                 <div class="row">
                     <div class="span2"><a class="btn small" href="#">Add comment &raquo;</a></div>
                     <div class="span2" style="padding-top: 7px; text-align: right; font-size: smaller;"><a href="#">999 comments</a></div>
