--- a/assets/templates/Forum Skeleton/partials/TopUsers.cshtml
+++ b/assets/templates/Forum Skeleton/partials/TopUsers.cshtml
@@ -49,3 +49,5 @@
         <small style="font-size: smaller;">35 points, 5 badges</small>
     </div>
 </div>
+<br/>
+<p><a href="AllUsers.cshtml">View all users.</a></p>
