--- a/assets/templates/Forum Skeleton/AllPosts.cshtml
+++ b/assets/templates/Forum Skeleton/AllPosts.cshtml
@@ -69,9 +69,9 @@
                     <img src="images/thumb-down.png"/><br/>
                     <img src="images/icon_notification_attention.png"/><br/>
                 </div>    
-                <h2>{Post Title}</h2>           
+                <h2><a href="Post.cshtml">{Post Title}</a></h2>           
                 <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere. 
-                    &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <span class="label">Example Category</span></p>
+                    &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <a href="Category.cshtml" class="label">Example Category</a></p>
                 <div class="row">
                     <div class="span2"><a class="btn small" href="#">Add comment &raquo;</a></div>
                     <div class="span2" style="padding-top: 7px; text-align: right; font-size: smaller;"><a href="#">999 comments</a></div>
@@ -83,9 +83,9 @@
                     <img src="images/thumb-down.png"/><br/>
                     <img src="images/icon_notification_attention.png"/><br/>
                 </div>    
-                <h2>{Post Title}</h2>           
+                <h2><a href="Post.cshtml">{Post Title}</a></h2>           
                 <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere. 
-                    &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <span class="label">Creative Category</span></p>
+                    &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <a href="Category.cshtml" class="label">Creative Category</a></p>
                 <div class="row">
                     <div class="span2"><a class="btn small" href="#">Add comment &raquo;</a></div>
                     <div class="span2" style="padding-top: 7px; text-align: right; font-size: smaller;"><a href="#">999 comments</a></div>
@@ -97,9 +97,9 @@
                     <img src="images/thumb-down.png"/><br/>
                     <img src="images/icon_notification_attention.png"/><br/>
                 </div>    
-                <h2>{Post Title}</h2>           
+                <h2><a href="Post.cshtml">{Post Title}</a></h2>           
                 <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere. 
-                    &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <span class="label">Unmoderated Forum</span></p>
+                    &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <a href="Category.cshtml" class="label">Unmoderated Forum</a></p>
                 <div class="row">
                     <div class="span2"><a class="btn small" href="#">Add comment &raquo;</a></div>
                     <div class="span2" style="padding-top: 7px; text-align: right; font-size: smaller;"><a href="#">999 comments</a></div>
@@ -111,9 +111,9 @@
                     <img src="images/thumb-down.png"/><br/>
                     <img src="images/icon_notification_attention.png"/><br/>
                 </div>    
-                <h2>{Post Title}</h2>           
+                <h2><a href="Post.cshtml">{Post Title}</a></h2>           
                 <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere. 
-                    &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <span class="label">Category</span></p>
+                    &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <a href="Category.cshtml" class="label">Category</a></p>
                 <div class="row">
                     <div class="span2"><a class="btn small" href="#">Add comment &raquo;</a></div>
                     <div class="span2" style="padding-top: 7px; text-align: right; font-size: smaller;"><a href="#">999 comments</a></div>
@@ -131,9 +131,9 @@
                     <img src="images/thumb-down.png"/><br/>
                     <img src="images/icon_notification_attention.png"/><br/>
                 </div>    
-                <h2>{Post Title}</h2>           
+                <h2><a href="Post.cshtml">{Post Title}</a></h2>           
                 <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere. 
-                    &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <span class="label">Example Category</span></p>
+                    &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <a href="Category.cshtml" class="label">Example Category</a></p>
                 <div class="row">
                     <div class="span2"><a class="btn small" href="#">Add comment &raquo;</a></div>
                     <div class="span2" style="padding-top: 7px; text-align: right; font-size: smaller;"><a href="#">999 comments</a></div>
@@ -145,9 +145,9 @@
                     <img src="images/thumb-down.png"/><br/>
                     <img src="images/icon_notification_attention.png"/><br/>
                 </div>    
-                <h2>{Post Title}</h2>           
+                <h2><a href="Post.cshtml">{Post Title}</a></h2>           
                 <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere. 
-                    &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <span class="label">Creative Category</span></p>
+                    &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <a href="Category.cshtml" class="label">Creative Category</a></p>
                 <div class="row">
                     <div class="span2"><a class="btn small" href="#">Add comment &raquo;</a></div>
                     <div class="span2" style="padding-top: 7px; text-align: right; font-size: smaller;"><a href="#">999 comments</a></div>
@@ -159,9 +159,9 @@
                     <img src="images/thumb-down.png"/><br/>
                     <img src="images/icon_notification_attention.png"/><br/>
                 </div>    
-                <h2>{Post Title}</h2>           
+                <h2><a href="Post.cshtml">{Post Title}</a></h2>           
                 <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere. 
-                    &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <span class="label">Unmoderated Forum</span></p>
+                    &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <a href="Category.cshtml" class="label">Unmoderated Forum</a></p>
                 <div class="row">
                     <div class="span2"><a class="btn small" href="#">Add comment &raquo;</a></div>
                     <div class="span2" style="padding-top: 7px; text-align: right; font-size: smaller;"><a href="#">999 comments</a></div>
@@ -173,9 +173,9 @@
                     <img src="images/thumb-down.png"/><br/>
                     <img src="images/icon_notification_attention.png"/><br/>
                 </div>    
-                <h2>{Post Title}</h2>           
+                <h2><a href="Post.cshtml">{Post Title}</a></h2>           
                 <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere. 
-                    &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <span class="label">Category</span></p>
+                    &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <a href="Category.cshtml" class="label">Category</a></p>
                 <div class="row">
                     <div class="span2"><a class="btn small" href="#">Add comment &raquo;</a></div>
                     <div class="span2" style="padding-top: 7px; text-align: right; font-size: smaller;"><a href="#">999 comments</a></div>
@@ -193,9 +193,9 @@
                     <img src="images/thumb-down.png"/><br/>
                     <img src="images/icon_notification_attention.png"/><br/>
                 </div>    
-                <h2>{Post Title}</h2>           
+                <h3><a href="Post.cshtml">{Post Title}</a></h3>           
                 <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere. 
-                    &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <span class="label">Example Category</span></p>
+                    &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <a href="Category.cshtml" class="label">Example Category</a></p>
                 <div class="row">
                     <div class="span2"><a class="btn small" href="#">Add comment &raquo;</a></div>
                     <div class="span2" style="padding-top: 7px; text-align: right; font-size: smaller;"><a href="#">999 comments</a></div>
@@ -207,9 +207,9 @@
                     <img src="images/thumb-down.png"/><br/>
                     <img src="images/icon_notification_attention.png"/><br/>
                 </div>    
-                <h2>{Post Title}</h2>           
+                <h3><a href="Post.cshtml">{Post Title}</a></h3>           
                 <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere. 
-                    &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <span class="label">Creative Category</span></p>
+                    &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <a href="Category.cshtml" class="label">Creative Category</a></p>
                 <div class="row">
                     <div class="span2"><a class="btn small" href="#">Add comment &raquo;</a></div>
                     <div class="span2" style="padding-top: 7px; text-align: right; font-size: smaller;"><a href="#">999 comments</a></div>
@@ -221,9 +221,9 @@
                     <img src="images/thumb-down.png"/><br/>
                     <img src="images/icon_notification_attention.png"/><br/>
                 </div>    
-                <h2>{Post Title}</h2>           
+                <h3><a href="Post.cshtml">{Post Title}</a></h3>           
                 <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere. 
-                    &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <span class="label">Unmoderated Forum</span></p>
+                    &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <a href="Category.cshtml" class="label">Unmoderated Forum</a></p>
                 <div class="row">
                     <div class="span2"><a class="btn small" href="#">Add comment &raquo;</a></div>
                     <div class="span2" style="padding-top: 7px; text-align: right; font-size: smaller;"><a href="#">999 comments</a></div>
@@ -235,9 +235,9 @@
                     <img src="images/thumb-down.png"/><br/>
                     <img src="images/icon_notification_attention.png"/><br/>
                 </div>    
-                <h2>{Post Title}</h2>           
+                <h3><a href="Post.cshtml">{Post Title}</a></h3>           
                 <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere. 
-                    &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <span class="label">Category</span></p>
+                    &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <a href="Category.cshtml" class="label">Category</a></p>
                 <div class="row">
                     <div class="span2"><a class="btn small" href="#">Add comment &raquo;</a></div>
                     <div class="span2" style="padding-top: 7px; text-align: right; font-size: smaller;"><a href="#">999 comments</a></div>
