--- a/assets/templates/Forum Skeleton/ControversialPosts.cshtml
+++ b/assets/templates/Forum Skeleton/ControversialPosts.cshtml
@@ -69,9 +69,9 @@
                     <img src="images/thumb-down.png"/><br/>
                     <img src="images/icon_notification_attention.png"/><br/>
                 </div>    
-                <h2>{Most Controversial Post Title}</h2>           
+                <h2><a href="Post.cshtml">{Most Controversial Post Title}</a></h2>           
                 <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere. Etiam porta sem malesuada magna mollis euismod. 
-                &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <span class="label">Placeholder Category</span></span></p>
+                &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <a href="Category.cshtml" class="label">Placeholder Category</span></a></p>
                 <div class="row">
                     <div class="span4"><a class="btn" href="#">Add comment &raquo;</a></div>
                     <div class="span4" style="padding-top: 7px; text-align: right; font-size: smaller;"><a href="#">999 comments</a></div>
@@ -83,9 +83,9 @@
                     <img src="images/thumb-down.png"/><br/>
                     <img src="images/icon_notification_attention.png"/><br/>
                 </div>    
-                <h2>{Post Title}</h2>           
+                <h2><a href="Post.cshtml">{Post Title}</a></h2>           
                 <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere. Etiam porta sem malesuada magna mollis euismod. 
-                &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <span class="label">Another Category</span></p>
+                &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <a href="Category.cshtml" class="label">Another Category</a></p>
                 <div class="row">
                     <div class="span4"><a class="btn small" href="#">Add comment &raquo;</a></div>
                     <div class="span4" style="padding-top: 7px; text-align: right; font-size: smaller;"><a href="#">999 comments</a></div>
@@ -102,9 +102,9 @@
                     <img src="images/thumb-down.png"/><br/>
                     <img src="images/icon_notification_attention.png"/><br/>
                 </div>    
-                <h2>{Post Title}</h2>           
+                <h2><a href="Post.cshtml">{Post Title}</a></h2>           
                 <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere. 
-                    &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <span class="label">Example Category</span></p>
+                    &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <a href="Category.cshtml" class="label">Example Category</a></p>
                 <div class="row">
                     <div class="span2"><a class="btn small" href="#">Add comment &raquo;</a></div>
                     <div class="span2" style="padding-top: 7px; text-align: right; font-size: smaller;"><a href="#">999 comments</a></div>
@@ -116,9 +116,9 @@
                     <img src="images/thumb-down.png"/><br/>
                     <img src="images/icon_notification_attention.png"/><br/>
                 </div>    
-                <h2>{Post Title}</h2>           
+                <h2><a href="Post.cshtml">{Post Title}</a></h2>           
                 <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere. 
-                    &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <span class="label">Creative Category</span></p>
+                    &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <a href="Category.cshtml" class="label">Creative Category</a></p>
                 <div class="row">
                     <div class="span2"><a class="btn small" href="#">Add comment &raquo;</a></div>
                     <div class="span2" style="padding-top: 7px; text-align: right; font-size: smaller;"><a href="#">999 comments</a></div>
@@ -130,9 +130,9 @@
                     <img src="images/thumb-down.png"/><br/>
                     <img src="images/icon_notification_attention.png"/><br/>
                 </div>    
-                <h2>{Post Title}</h2>           
+                <h2><a href="Post.cshtml">{Post Title}</a></h2>           
                 <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere. 
-                    &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <span class="label">Unmoderated Forum</span></p>
+                    &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <a href="Category.cshtml" class="label">Unmoderated Forum</a></p>
                 <div class="row">
                     <div class="span2"><a class="btn small" href="#">Add comment &raquo;</a></div>
                     <div class="span2" style="padding-top: 7px; text-align: right; font-size: smaller;"><a href="#">999 comments</a></div>
@@ -144,9 +144,9 @@
                     <img src="images/thumb-down.png"/><br/>
                     <img src="images/icon_notification_attention.png"/><br/>
                 </div>    
-                <h2>{Post Title}</h2>           
+                <h2><a href="Post.cshtml">{Post Title}</a></h2>           
                 <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere. 
-                    &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <span class="label">Category</span></p>
+                    &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <a href="Category.cshtml" class="label">Category</a></p>
                 <div class="row">
                     <div class="span2"><a class="btn small" href="#">Add comment &raquo;</a></div>
                     <div class="span2" style="padding-top: 7px; text-align: right; font-size: smaller;"><a href="#">999 comments</a></div>
@@ -164,9 +164,9 @@
                     <img src="images/thumb-down.png"/><br/>
                     <img src="images/icon_notification_attention.png"/><br/>
                 </div>    
-                <h2>{Post Title}</h2>           
+                <h3><a href="Post.cshtml">{Post Title}</a></h3>           
                 <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere. 
-                    &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <span class="label">Example Category</span></p>
+                    &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <a href="Category.cshtml" class="label">Example Category</a></p>
                 <div class="row">
                     <div class="span2"><a class="btn small" href="#">Add comment &raquo;</a></div>
                     <div class="span2" style="padding-top: 7px; text-align: right; font-size: smaller;"><a href="#">999 comments</a></div>
@@ -178,9 +178,9 @@
                     <img src="images/thumb-down.png"/><br/>
                     <img src="images/icon_notification_attention.png"/><br/>
                 </div>    
-                <h2>{Post Title}</h2>           
+                <h3><a href="Post.cshtml">{Post Title}</a></h3>           
                 <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere. 
-                    &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <span class="label">Creative Category</span></p>
+                    &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <a href="Category.cshtml" class="label">Creative Category</a></p>
                 <div class="row">
                     <div class="span2"><a class="btn small" href="#">Add comment &raquo;</a></div>
                     <div class="span2" style="padding-top: 7px; text-align: right; font-size: smaller;"><a href="#">999 comments</a></div>
@@ -192,9 +192,9 @@
                     <img src="images/thumb-down.png"/><br/>
                     <img src="images/icon_notification_attention.png"/><br/>
                 </div>    
-                <h2>{Post Title}</h2>           
+                <h3><a href="Post.cshtml">{Post Title}</a></h3>           
                 <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere. 
-                    &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <span class="label">Unmoderated Forum</span></p>
+                    &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <a href="Category.cshtml" class="label">Unmoderated Forum</a></p>
                 <div class="row">
                     <div class="span2"><a class="btn small" href="#">Add comment &raquo;</a></div>
                     <div class="span2" style="padding-top: 7px; text-align: right; font-size: smaller;"><a href="#">999 comments</a></div>
@@ -206,9 +206,9 @@
                     <img src="images/thumb-down.png"/><br/>
                     <img src="images/icon_notification_attention.png"/><br/>
                 </div>    
-                <h2>{Post Title}</h2>           
+                <h3><a href="Post.cshtml">{Post Title}</a></h3>           
                 <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere. 
-                    &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <span class="label">Category</span></p>
+                    &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <a href="Category.cshtml" class="label">Category</a></p>
                 <div class="row">
                     <div class="span2"><a class="btn small" href="#">Add comment &raquo;</a></div>
                     <div class="span2" style="padding-top: 7px; text-align: right; font-size: smaller;"><a href="#">999 comments</a></div>
