--- a/assets/templates/Forum Skeleton/Tag.cshtml
+++ b/assets/templates/Forum Skeleton/Tag.cshtml
@@ -56,121 +56,13 @@
         <h1>{Tag Name}</h1>
         
         <ul class="breadcrumb">
-            <li><a href="Categories.cshtml">Tags</a> <span class="divider">/</span></li>
+            <li><a href="Tags.cshtml">Tags</a> <span class="divider">/</span></li>
             <li class="active">{Tag Name}</li>
         </ul>
         
         <hr />
         
-        <!-- all posts -->
-
-        <div class="row">
-            <div class="span5">
-                <h2><a href="Tag.cshtml">{Tag Name}</a></h2>
-                <dl>
-                    <dt>{Post title}</dt>                    
-                    <dd>A truncated post body. Etiam porta sem malesuada magna mollis euismod.<br/> <span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a> with 33 comments.</span></dd>
-                    <dt>{Post title}</dt>                    
-                    <dd>Etiam porta sem malesuada magna mollis euismod.<br/> <span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a> with 33 comments.</span></dd>     
-                    <dt>{Post title}</dt>                    
-                    <dd>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere. <br/> <span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a> with 33 comments.</span></dd>  
-                    <dt>{Post title}</dt>                    
-                    <dd>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante. <br/> <span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a> with 33 comments.</span></dd>  
-                </dl>
-                <a href="#">View</a> 33 more posts.
-            </div>
-           <div class="span5">
-                <h2><a href="Tag.cshtml">{Tag Name}</a></h2>
-                <dl>
-                    <dt>{Post title}</dt>                    
-                    <dd>A truncated post body. Etiam porta sem malesuada magna mollis euismod.<br/> <span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a> with 33 comments.</span></dd>
-                    <dt>{Post title}</dt>                    
-                    <dd>Etiam porta sem malesuada magna mollis euismod.<br/> <span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a> with 33 comments.</span></dd>     
-                    <dt>{Post title}</dt>                    
-                    <dd>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere. <br/> <span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a> with 33 comments.</span></dd>  
-                    <dt>{Post title}</dt>                    
-                    <dd>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante. <br/> <span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a> with 33 comments.</span></dd>  
-                </dl>
-                <a href="#">View</a> 33 more posts.
-            </div>
-           <div class="span5">
-                <h2><a href="Tag.cshtml">{Tag Name}</a></h2>
-                <dl>
-                    <dt>{Post title}</dt>                    
-                    <dd>A truncated post body. Etiam porta sem malesuada magna mollis euismod.<br/> <span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a> with 33 comments.</span></dd>
-                    <dt>{Post title}</dt>                    
-                    <dd>Etiam porta sem malesuada magna mollis euismod.<br/> <span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a> with 33 comments.</span></dd>     
-                    <dt>{Post title}</dt>                    
-                    <dd>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere. <br/> <span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a> with 33 comments.</span></dd>  
-                    <dt>{Post title}</dt>                    
-                    <dd>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante. <br/> <span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a> with 33 comments.</span></dd>  
-                </dl>
-                <a href="#">View</a> 33 more posts.
-            </div>
-            
-        </div>
-            
-        <hr>            
-            
-        <div class="row">
-            <div class="span4" style="font-size: smaller;">
-                <h3><a href="Tag.cshtml">{Tag Name}</a></h3>        
-                <dl>
-                    <dt>{Post title}</dt>                    
-                    <dd>A severely truncated post body.<br/> <span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a> with 33 comments.</span></dd>
-                    <dt>{Post title}</dt>                    
-                    <dd>Etiam porta sem malesuada magna mollis euismod. <br/> <span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a> with 33 comments.</span></dd>  
-                </dl>
-                <a href="#">View</a> 33 more posts.                
-            </div>
-            <div class="span4" style="font-size: smaller;">
-                <h3><a href="Tag.cshtml">{Tag Name}</a></h3>        
-                <dl>
-                    <dt>{Post title}</dt>                    
-                    <dd>A severely truncated post body.<br/> <span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a> with 33 comments.</span></dd>
-                    <dt>{Post title}</dt>                    
-                    <dd>Etiam porta sem malesuada magna mollis euismod. <br/> <span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a> with 33 comments.</span></dd>  
-                </dl>
-                <a href="#">View</a> 33 more posts.              
-            </div>
-            <div class="span4" style="font-size: smaller;">
-                <h3><a href="Tag.cshtml">{Tag Name}</a></h3>        
-                <dl>
-                    <dt>{Post title}</dt>                    
-                    <dd>A severely truncated post body.<br/> <span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a> with 33 comments.</span></dd>
-                    <dt>{Post title}</dt>                    
-                    <dd>Etiam porta sem malesuada magna mollis euismod. <br/> <span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a> with 33 comments.</span></dd>  
-                </dl>
-                <a href="#">View</a> 33 more posts.               
-            </div>
-            <div class="span4" style="font-size: smaller;">
-                <h3><a href="Tag.cshtml">{Tag Name}</a></h3>        
-                <dl>
-                    <dt>{Post title}</dt>                    
-                    <dd>A severely truncated post body.<br/> <span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a> with 33 comments.</span></dd>
-                    <dt>{Post title}</dt>                    
-                    <dd>Etiam porta sem malesuada magna mollis euismod. <br/> <span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a> with 33 comments.</span></dd>  
-                </dl>
-                <a href="#">View</a> 33 more posts.                
-            </div>  
-            
-        </div>
-        
-        <hr/>
-
-        <div class="pagination">
-            <ul>
-                <li class="prev disabled"><a href="#">&larr; Previous</a></li>
-                <li><a href="#">1</a></li>
-                <li class="active"><a href="#">2</a></li>
-                <li><a href="#">3</a></li>
-                <li class="disabled"><a href="#">...</a></li>
-                <li><a href="#">45</a></li>
-                <li><a href="#">46</a></li>
-                <li><a href="#">47</a></li>
-                <li class="next"><a href="#">Next &rarr;</a></li>
-            </ul>
-        </div>
+        <p><small>(Tag info here.)</small></p>
             
         <footer>
           <p>&copy; Newco 2011-12</p>
