--- a/assets/templates/Forum Skeleton/partials/Badge.cshtml
+++ b/assets/templates/Forum Skeleton/partials/Badge.cshtml
@@ -1,9 +1,9 @@
 ﻿<div id="badge" class="row">
     <div class="span1 badge-avatar">
-         <img src="https://secure.gravatar.com/avatar/4ff80c3ba10af1c3a5d86f293003cc99?s=50"/> 
+        <a href="User.cshtml"><img src="https://secure.gravatar.com/avatar/4ff80c3ba10af1c3a5d86f293003cc99?s=50"/></a> 
     </div>
     <div class="span2 badge-labels">
-        <h3 class="badge-username">{Username}</h3>
+        <h3 class="badge-username"><a href="User.cshtml">{Username}</a></h3>
         <p class="badge-points">25 points</p>
     </div>
 </div> 
