--- a/assets/templates/Forum Skeleton/Categories.cshtml
+++ b/assets/templates/Forum Skeleton/Categories.cshtml
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>{Forum Name} - All Posts</title>
+    <title>{Forum Name} - Categories</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
