--- a/assets/templates/Forum Skeleton/partials/Categories.cshtml
+++ b/assets/templates/Forum Skeleton/partials/Categories.cshtml
@@ -1,6 +1,5 @@
 ﻿  <h3>Categories</h3>
   <ul>
-    <li><a href="Categories.cshtml"><strong>All Categories</strong></a> (70)</li>
     <li><a href="Category.cshtml">Category</a> (10)</li>
     <li><a href="Category.cshtml">Another Category</a> (10)</li>
     <li><a href="Category.cshtml">Creative Category</a> (10)</li>
@@ -8,3 +7,4 @@
     <li><a href="Category.cshtml">Placeholder Category</a> (10)</li>
     <li><a href="Category.cshtml">Example Category</a> (10)</li>
   </ul>
+<p><a href="Categories.cshtml">View all categories.</a></p>
