moved contents of head to layout, other misc. changes

--- a/assets/templates/Forum Skeleton/Home.cshtml
+++ b/assets/templates/Forum Skeleton/Home.cshtml
@@ -5,39 +5,10 @@
 		<title>{Forum Name} Home</title>
 		<meta name="description" content="">
 		<meta name="author" content="">
-		<!--[if lt IE 9]>
-			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"> </script>
-		<![endif]-->
-		<!-- Le styles -->
-		<link rel="stylesheet" href="styles/bootstrap.css">
-		<link rel="stylesheet" href="styles/jqcloud.css">
-		<link rel="stylesheet" href="styles/custom.css">
-		<script src="http://code.jquery.com/jquery-1.5.2.min.js"> </script>
-		<script src="scripts/bootstrap-alerts.js"> </script>
-		<script src="scripts/bootstrap-buttons.js"> </script>
-		<script src="scripts/bootstrap-modal.js"> </script>
-		<script src="scripts/jqcloud-0.2.8.js"> </script>
-		<script>
-		var tag_cloud = [
-			{ text: "Tag", weight: 1, url: "Tag.cshtml#tag" },
-			{ text: "Another Tag", weight: 2, url: "Tag.cshtml#another-tag" },
-			{ text: "Green", weight: 3, url: "Tag.cshtml#green" },
-			{ text: "Favorites", weight: 4, url: "Tag.cshtml#favorites" },
-			{ text: "Cars", weight: 6, url: "Tag.cshtml#cars" },
-			{ text: "Arbitrary", weight: 4, url: "Tag.cshtml#favorites" },
-			{ text: "Bars", weight: 6, url: "Tag.cshtml#cars" },
-			{ text: "Hoaxes", weight: 5, url: "Tag.cshtml#hoaxes" },
-			{ text: "Bats", weight: 6, url: "Tag.cshtml#cars" },
-			{ text: "Marathon", weight: 2, url: "Tag.cshtml#another-tag" },
-			{ text: "Jokes", weight: 7, url: "Tag.cshtml#jokes" },
-		];
 
-		$(document).ready(function() {
-			$(".alert-message").alert();
+		@RenderPage("~/partials/shared/Styles.cshtml")
+		@RenderPage("~/partials/shared/Scripts.cshtml")
 
-			$("#tagCloud").jQCloud(tag_cloud);
-		});
-	</script>
 	</head>
 	<body>
 		@RenderPage("~/partials/TopBar.cshtml")
