--- a/assets/templates/Forum Skeleton/UserBadges.cshtml
+++ b/assets/templates/Forum Skeleton/UserBadges.cshtml
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>{Forum Name} - {Username}'s Profile</title>
+		<title>{Forum Name} - {Username}'s Badges</title>
 		<meta name="description" content="">
 		<meta name="author" content="">
 
@@ -21,11 +21,12 @@
 
 			<div class="content">
 
-				<h1>{Username}'s Profile</h1>
+				<h1>{Username}'s Badges</h1>
 
 				<ul class="breadcrumb">
 					<li><a href="Users.cshtml">Users</a> <span class="divider">/</span></li>
-					<li class="active">{Username}</li>
+					<li><a href="User.cshtml">{Username}</a> <span class="divider">/</span></li>
+					<li class="active">Badges</li>
 				</ul>
 
 				<hr />
