--- a/assets/templates/Forum Skeleton/User.cshtml
+++ b/assets/templates/Forum Skeleton/User.cshtml
@@ -24,7 +24,7 @@
 				<h1>{Username}'s Profile</h1>
 
 				<ul class="breadcrumb">
-					<li><a href="Users.cshtml">Users</a> <span class="divider">/</span></li>
+					<li><a href="AllUsers.cshtml">Users</a> <span class="divider">/</span></li>
 					<li class="active">{Username}</li>
 				</ul>
 
