--- a/assets/templates/Forum Skeleton/UserRecentActivity.cshtml
+++ b/assets/templates/Forum Skeleton/UserRecentActivity.cshtml
@@ -24,7 +24,7 @@
 				<h1>{Username}'s Recent Activity</h1>
 
 				<ul class="breadcrumb">
-					<li><a href="Users.cshtml">Users</a> <span class="divider">/</span></li>
+					<li><a href="AllUsers.cshtml">Users</a> <span class="divider">/</span></li>
 					<li><a href="User.cshtml">{Username}</a> <span class="divider">/</span></li>
 					<li class="active">Recent Activity</li>
 				</ul>
