--- a/assets/templates/Forum Skeleton/partials/TopBar.cshtml
+++ b/assets/templates/Forum Skeleton/partials/TopBar.cshtml
@@ -1,7 +1,7 @@
 ﻿<div class="topbar">
 	<div class="topbar-inner">
 		<div class="container-fluid">
-			<a class="brand" href="#">{Forum Name}</a>
+			<a class="brand" href="Home.cshtml">{Forum Name}</a>
 			<ul class="nav">
 				<li class="active"><a href="Home.cshtml">Home</a></li>
 				<li><a href="Categories.cshtml">Categories</a></li>
